adicionado imagens e caminhos para acessar a página da fiap.

--- a/cursos/análise-e-desenvolvimento-de-sistemas.html
+++ b/cursos/análise-e-desenvolvimento-de-sistemas.html
@@ -11,7 +11,7 @@
         <header class="cabecalho">
             <h1 style =text-align:center;font-family:Verdana, Gevena, Times new roman, sans-serif;
             > FIAP o novo está aqui!</h1>
-            <img src="../assets/análise e desenvolvimento de sistemas.png" alt= "Foto demonstrativa do curso de Análise e desenvolvimento de sistemas"> 
+            <img src="../img/análise e desenvolvimento de sistemas.png" alt= "Foto demonstrativa do curso de Análise e desenvolvimento de sistemas"> 
                 <p>Você vai aprender a identificar as necessidades estruturais de um sistema, documentar, criar protótipos e desenvolver 
                 para web e mobile utilizando os principais softwares, ferramentas e metodologias do mercado, além de ser capaz de 
                 gerenciar projetos e controlar a qualidade de programas.  
