--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                     <h2>Conheça os cursos</h2>
                     <nav class="menu">
                         <ul>
-                            <li><a href="./paginas/administração.html">Administração</li>
-                            <li><a href="./paginas/análise-e-desenvolvimento-de-sistemas.html">Análise e desenvolvimento de sistemas</li>
-                            <li><a href="./paginas/banco-de-dados.html">Banco De Dados</li>
-                            <li><a href="./paginas/engenharia-da-computação.html">Engenharia de Computação</li>
-                            <li><a href="./paginas/engenharia-de-produção .html">Engenharia de Produção</li>
-                            <li><a href="./paginas/engenharia-mecatrônica.html">Engenharia Mecatrônica</li>
-                            <li><a href="./paginas/gestão-de-tecnologia-da-informação.html">Gestão de Tecnologia da Informação</li>
-                            <li><a href="./paginas/jogos-digitais.html">Jogos Digitais</li>
-                            <li><a href="./paginas/rede-de-computadores.html">Rede de Computação</li>
-                            <li><a href="./paginas/sistemas-de-informação.html">Sistemas de informação</li>
-                            <li><a href="./paginas/sistemas-para-internet.html">Sistemas para Internet</li>
+                            <li><a href="./cursos/administração.html">Administração</li>
+                            <li><a href="./cursos/análise-e-desenvolvimento-de-sistemas.html">Análise e desenvolvimento de sistemas</li>
+                            <li><a href="./cursos/banco-de-dados.html">Banco De Dados</li>
+                            <li><a href="./cursos/engenharia-da-computação.html">Engenharia de Computação</li>
+                            <li><a href="./cursos/engenharia-de-produção .html">Engenharia de Produção</li>
+                            <li><a href="./cursos/engenharia-mecatrônica.html">Engenharia Mecatrônica</li>
+                            <li><a href="./cursos/gestão-de-tecnologia-da-informação.html">Gestão de Tecnologia da Informação</li>
+                            <li><a href="./cursos/jogos-digitais.html">Jogos Digitais</li>
+                            <li><a href="./cursos/rede-de-computadores.html">Rede de Computação</li>
+                            <li><a href="./cursos/sistemas-de-informação.html">Sistemas de informação</li>
+                            <li><a href="./cursos/sistemas-para-internet.html">Sistemas para Internet</li>
                         </ul>
                     </nav>
             </header>
