salvando fotos dos cursos da fiap para demonstra-las no site.

--- a/cursos/banco-de-dados.html
+++ b/cursos/banco-de-dados.html
@@ -12,6 +12,7 @@
         <header class="cabecalho">
             <h1 style =text-align:center;font-family:Verdana, Gevena, Times new roman, sans-serif;
             > FIAP o novo está aqui!</h1>
+            <img src="../img/banco de dados.PNG" alt= "Foto demonstrativa do curso de banco de dados"> 
                 <p> Tecnologia em Banco de Dados prepara você para entender e utilizar melhor os dados, criando soluções inovadoras a 
                     partir de um fluxo de conteúdo monitorado e analisado.  
                     E personalizando os serviços prestados por meio da construção de bases de dados para tomada de decisão e aplicação 
