--- a/cursos/engenharia-de-produção .html
+++ b/cursos/engenharia-de-produção .html
@@ -11,6 +11,7 @@
         <header class="cabecalho">
             <h1 style =text-align:center;font-family:Verdana, Gevena, Times new roman, sans-serif; >
                 FIAP o novo está aqui!</h1>
+                <img src="../img/engenharia-da-producao.jpg" alt= "Foto demonstrativa do curso de Engenharia de Produção"> 
              <p> O ENGENHEIRO DE PRODUÇÃO reúne conhecimentos das áreas de administração, economia e engenharia. O curso foi 
                 planejado para incorporar a influência de ferramentas tecnológicas, indispensáveis para gestão de negócios.  
                 A grade privilegia conhecimentos avançados na área de exatas (matemática, ciência e tecnologia) e à formação em 
