--- a/cursos/engenharia-da-computação.html
+++ b/cursos/engenharia-da-computação.html
@@ -11,6 +11,7 @@
         <header class="cabecalho">
             <h1 style =text-align:center;font-family:Verdana, Gevena, Times new roman, sans-serif;
             > FIAP o novo está aqui!</h1>
+            <img src="../img/engenhariadecomp.png" alt= "Foto demonstrativa do curso de Engenharia de Computação"> 
                 <p> O ENGENHEIRO DA COMPUTAÇÃO desenvolve projetos nas áreas de sistemas operacionais, arquitetura de 
                     computadores, redes, robótica e inteligência artificial.  
                     A grade privilegia conhecimentos avançados na área de exatas (física e matemática) e aspectos de eletrônica, controle 
