foto adicionada a gestão de tecnologia.

--- a/cursos/gestão-de-tecnologia-da-informação.html
+++ b/cursos/gestão-de-tecnologia-da-informação.html
@@ -11,6 +11,8 @@
         <header class="cabecalho">
             <h1 style =text-align:center;font-family:Verdana, Gevena, Times new roman, sans-serif;
             > FIAP o novo está aqui!</h1>
+            <img src="../img/gestão de tecnologia.png" alt= "Foto demonstrativa do curso de Gestão de teconologia"> 
+            
                 <p> Você vai planejar e gerenciar sistemas computacionais (hardware) e de informação (software) nas áreas de processos, 
                     mobilidade, segurança, tecnologias emergentes, sistemas integrados, big data, cloud computing, engenharia de 
                     software, marketing digital e redes sociais.  
