--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="container">
 
             <header class="cabecalho">
-                <h1 style =text-align:center;font-family:Verdana, Gevena, Times new roman, sans-serif;
-                > FIAP o novo está aqui!</h1>
+                <h1> FIAP o novo está aqui!</h1>
+                <img src="img/logofiap.png" alt="Foto ilustrativa do logo da Fiap">
                 <p>A FIAP é o centro de excelência em tecnologia mais respeitado do país. Uma história que vem sendo construída dia 
                     após dia, estimulando mentes a vivenciarem a inovação e o empreendedorismo. Porque a FIAP acredita no poder 
                     transformador da tecnologia. Um poder que, aliado à criatividade, inventa, muda, inquieta. Faz as pessoas buscarem 
@@ -36,6 +36,9 @@
                     </nav>
             </header>
         
+            </div>
+            <div>
+                <a href="./minhas-paginas-favoritas.html"><img src="./img/Meus 10 Sites favoritos (1).png" alt="Foto ilustrativa dos meus 10 sites favoritos"></a>
             </div>
 </body>
 </html>
